# morph-contract

./: .gitignore  Anchor.toml  README.md
programs/morph-contract/: Cargo.toml
programs/morph-contract/src/: lib.rs
tests/: morph-contract.ts
tests/fixtures/: counter.json  identity.json
